autoplay if visible and fix white space

--- a/src/app.styl
+++ b/src/app.styl
@@ -116,6 +116,9 @@ section
       padding 0
       border none
       box-shadow: none
+      width: 100%
+      height: auto;
+      background: white
       &:before
         display: none
       .camera
@@ -123,6 +126,7 @@ section
       .screen
         border none
         box-shadow: none
+        height: auto;
         background: white
       .home
         display: none
